<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="StructureWithArray" Id="{e0396530-45b9-49f4-93a8-80c5025244d2}">
    <Declaration><![CDATA[TYPE StructureWithArray :
STRUCT
	myArray : ARRAY [0..2] OF LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>