<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="StructureWithStructureWithArray" Id="{3f20319c-3773-4ad4-9341-47612ec22aa4}">
    <Declaration><![CDATA[TYPE StructureWithStructureWithArray :
STRUCT
	myStruct : StructureWithArray;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>