<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL" Id="{806f1e32-aab2-4afe-8c7e-f4df6e451756}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

	structureWithStructureWithArray : StructureWithStructureWithArray;
	structureWithArray : structureWithArray;
	
	arrayWithStructureWithArray : ARRAY [0..2] OF structureWithArray;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>